proper xei integration ot the me part slots